Minor fixes with the fonts, and big fix with the gigantic h1 on the front page being invisible on the deployed page because the background image wouldn't load.

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,13 @@
 
 @import 'tailwindcss';
 
+@theme{
+  --font-mono: 'Hack', monospace;
+  --font-sans: 'Comic Sans MS', cursive, sans-serif;
+
+  --font-oswald: 'Oswald', sans-serif;
+}
+
 .nav-link {
     @apply text-gray-700 px-1 lg:px-3 py-2 box-content text-sm 
     hover:text-purple-700
